    (Closes: #584130)
  * r8192s_usb: Fix various bugs:
    - Check for skb allocation failure in 2 more places
    - Update LED control code
    - Clean up in case of an error in module initialisation
    - Rename and remove proc directories correctly if an interface is
      not called wlan0 (Closes: #582972)
    - Correct device ID table (Closes: #584945, #587985)
  * Add r8192u_usb driver

  [ Aurelien Jarno ]
  * [sh4] fix sh_tmu clocksource following recent nohz changes.
  * [sh4] optimize runtime disabling of trapped I/O. 
  * [mips] backport mips/swarm: fix M3 TLB exception handler.

  [ Moritz Muehlenhoff ]
  * Enable X86 board specific fixups for reboot (Closes: #536537)

  [ Martin Michlmayr ]
  * OpenRD-Base: revert patch "allow SD/UART1 selection" since it
    never made it upstream.
  * ARM: update mach types.
  * Add support for OpenRD-Ultimate.
  * QNAP TS-11x/TS-21x: Add MPP36 (RAM) and MPP44 (board ID).
  * Add support for the HP t5325 Thin Client.
  * m25p80: Add support for Macronix 25L8005.
  * Add framebuffer driver for XGI chipsets.
  * [armel/kirkwood] Enable FB_XGI and FRAMEBUFFER_CONSOLE.
  * [armel] Make MOUSE_PS2 modular.
  * [armel] Build INPUT_UINPUT for all flavours.
  * Update Marvell CESA (mv_cesa) driver (Closes: #585790):
    - Invoke the user callback from a softirq context
    - Remove compiler warning in mv_cesa driver
    - Fix situation where the dest sglist is organized differently than...
    - Fix situations where the src sglist spans more data than the reques...
    - Enqueue generic async requests
    - Rename a variable to a more suitable name
    - Execute some code via function pointers rathr than direct calls
    - Make the copy-back of data optional
    - Support processing of data from previous requests
    - Add sha1 and hmac(sha1) async hash drivers

  [ Bastian Blank ]
  * Disable mISDN support for NETJet cards. The driver binds a generic PCI
    bridge.
  * Disable ISDN4Linux drivers.

  [ maximilian attems]