@@ -1,0 +1,11 @@
+#!/bin/bash
+
+# Execute the right version of perf for the current kernel.
+version="$(uname -r)"
+version="${version%%-*}"
+shopt -s execfail
+exec "perf_$version" "$@"
+
+# Not found? Tell the user which package to install.
+echo >&2 "E: linux-tools-$version is not installed."
+exit 1
