@@ -1,0 +1,19 @@
+.TH PERF 1 "4 July 2010"
+.SH NAME
+perf \- performance analysis tools for Linux
+.SH SYNOPSIS
+.HP
+\fBperf\fR [\fB\-\-version\fR] [\fB\-\-help\fR] \fICOMMAND\fR [\fIARGS\fR]
+.SH DESCRIPTION
+.LP
+Performance counters for Linux are are a new kernel\-based subsystem
+that provide a framework for all things performance analysis.  It
+covers hardware level (CPU/PMU, Performance Monitoring Unit) features
+and software features (software counters, tracepoints) as well.
+.LP
+Each version of the perf tools may depend on new kernel features, so
+you must install a different version for each kernel version.  The
+\fBperf\fR command will automatically run the correct version for the
+running kernel version.
+.SH SEE ALSO
+perf_\fIversion\fR(1)
