@@ -32,12 +32,14 @@ setup_env += DISTRIBUTION_OFFICIAL_BUILD=1 DISTRIBUTION_UPLOADER=$(UPLOADER) DIS
 MAKE_CLEAN = $(setup_env) $(MAKE)
 MAKE_SELF := $(MAKE) -f debian/rules.real $(MAKEOVERRIDES)
 MAKEOVERRIDES =
+MAKE_PERF_VARS = prefix=/usr NO_PERL=1 MBITS=
 
 #
 # Targets
 #
 binary-arch-arch: install-headers_$(ARCH)
 binary-arch-arch: install-libc-dev_$(ARCH)
+binary-arch-arch: install-tools_$(ARCH)
 binary-arch-featureset: install-headers_$(ARCH)_$(FEATURESET)
 binary-arch-flavour: install-image_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_$(TYPE)
 ifeq ($(DEBUG),True)
@@ -131,6 +133,14 @@ $(STAMPS_DIR)/build_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_plain-s390-tape \
 $(STAMPS_DIR)/build_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_plain-xen:
 	+$(MAKE_CLEAN) -C '$(DIR)' $(JOBS_ARG) $(BUILD_TARGET)
 	python debian/bin/buildcheck.py $(DIR) $(ARCH) $(FEATURESET) $(FLAVOUR)
+	@$(stamp)
+
+$(STAMPS_DIR)/build-tools_$(ARCH): SOURCE_DIR=$(BUILD_DIR)/source
+$(STAMPS_DIR)/build-tools_$(ARCH): DIR=$(BUILD_DIR)/build-tools_$(ARCH)
+$(STAMPS_DIR)/build-tools_$(ARCH): $(STAMPS_DIR)/source
+	rm -rf $(DIR)
+	cp -al $(SOURCE_DIR) $(DIR)
+	+$(MAKE_CLEAN) -C '$(DIR)/tools/perf' $(JOBS_ARG) $(MAKE_PERF_VARS) all man
 	@$(stamp)
 
 $(STAMPS_DIR)/build-doc: SOURCE_DIR=$(BUILD_DIR)/source
@@ -468,6 +478,27 @@ ifeq ($(MODULES),True)
 endif
 	+$(MAKE_SELF) install-base BUILDDEB_ARGS="-Zbzip2"
 
+install-tools_$(ARCH): PACKAGE_NAME = linux-tools-$(UPSTREAMVERSION)
+install-tools_$(ARCH): PACKAGE_DIR = debian/$(PACKAGE_NAME)
+install-tools_$(ARCH): DIR = $(BUILD_DIR)/build-tools_$(ARCH)
+install-tools_$(ARCH): DH_OPTIONS = -p$(PACKAGE_NAME)
+install-tools_$(ARCH): $(STAMPS_DIR)/build-tools_$(ARCH)
+	dh_testdir
+	dh_testroot
+	dh_prep
+	dh_installdirs usr/bin
+	+$(MAKE_CLEAN) -C '$(DIR)/tools/perf' $(MAKE_PERF_VARS) \
+		DESTDIR='$(CURDIR)/$(PACKAGE_DIR)' install install-man
+	# Rename command and manual pages to include version
+	mv $(PACKAGE_DIR)/usr/bin/perf $(PACKAGE_DIR)/usr/bin/perf_$(UPSTREAMVERSION)
+	for manpage in $(PACKAGE_DIR)/usr/share/man/*/*; do \
+		mv "$$manpage" "$$(echo "$$manpage" | sed 's,/perf,&_$(UPSTREAMVERSION),')" || exit; \
+	done
+	# Fix up cross-references
+	sed -i '/^\.SH "SEE ALSO"/,/^\.SH/ { s/perf-/perf_$(UPSTREAMVERSION)-/g }' \
+		$(PACKAGE_DIR)/usr/share/man/*/*
+	+$(MAKE_SELF) install-base
+
 install-patch: PACKAGE = linux-patch-debian-$(VERSION)
 install-patch: pbase := /usr/src/kernel-patches/all/$(UPSTREAMVERSION)
 install-patch: pfull := debian/$(PACKAGE)$(pbase)
@@ -510,7 +541,8 @@ install-linux-base:
 	dh_testdir
 	dh_testroot
 	dh_prep
-	dh_install -X.svn
+	dh_install debian/bin/perf /usr/bin
+	dh_installman debian/perf.1
 	dh_installdebconf
 	+$(MAKE_SELF) install-base
 
