@@ -1,3 +1,15 @@
+Package: linux-tools-@version@
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: linux-base (>= 2.6.32-16)
+Suggests: linux-doc-@version@
+Description: Performance analysis tools for Linux @upstreamversion@
+ This package contains the 'perf' performance analysis tools for Linux
+ kernel version @upstreamversion@.
+ .
+ The linux-base package contains a 'perf' command which will invoke the
+ appropriate version for the running kernel.
+
 Package: linux-source-@version@
 Architecture: all
 Section: kernel
