@@ -3,7 +3,7 @@ Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>, Frederik Schüler <fs@debian.org>, maximilian attems <maks@debian.org>, Ben Hutchings <ben@decadent.org.uk>
 Standards-Version: 3.8.4
-Build-Depends: debhelper (>> 7), cpio, module-init-tools, python, lzma [armel]
-Build-Depends-Indep: bzip2, python-support, xmlto
+Build-Depends: debhelper (>> 7), cpio, module-init-tools, python, lzma [armel], libelf-dev, asciidoc, xmlto
+Build-Depends-Indep: bzip2, python-support
 Vcs-Svn: svn://svn.debian.org/svn/kernel/dists/sid/linux-2.6/
 Vcs-Browser: http://svn.debian.org/wsvn/kernel/dists/sid/linux-2.6/?op=log
