@@ -56,6 +56,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
       not called wlan0 (Closes: #582972)
     - Correct device ID table (Closes: #584945, #587985)
   * Add r8192u_usb driver
+  * Add linux-tools-<version> package containing the perf tool
+    (Closes: #548715)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
